--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- saved from url=(0053)https://holger-moller.github.io/adventskalender-2022/ -->
+<!-- saved from url=(0053)https://holger-moller.github.io/sigrunsadvent/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Sigruns Adventskalender 2023</title>
@@ -84,7 +84,7 @@ function f_Check_Date(tag)
 
 
 
- b_Check_Date = 1;  // zum Testen der Links //HM
+ // b_Check_Date = 1;  // zum Testen der Links //HM
  // alert(b_Check_Date);  // zum Testen
 
 }
