--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function f_Check_Date(tag)
 
 
 
- // b_Check_Date = 1;  // zum Testen der Links //HM
+ // b_Check_Date = 1;  // Schalter zum Testen der Links //HM
  // alert(b_Check_Date);  // zum Testen
 
 }
@@ -138,15 +138,15 @@ var verweis = new Array();
 <!-- URLs / LINKS -->
 
 verweis[1]  = "https://yewtu.be/embed/k_LmRcr8Mm4";   	// ok - Redemption Song
-verweis[2]  = "https://www.yewtu.be/watch?v=Z8O8Ls1R8lU";   // Jöran: Über Pinguine und Medien
+verweis[2]  = "https://www.chefkoch.de/rezepte/1841351298407440/Haferflocken-Kaese-Bratlinge.html";   // ok - Haferflocken-Käse-Bratlinge
 verweis[3]  = "https://telegra.ph/Ich-will-mich-mit-Winter-bedecken-11-30";   // ok - Rilke: Ich will mich mit Winter bedecken ...
 verweis[4]  = "https://www.youtube.com/embed/jnj9vEvOKdA";   // ok - Deep Focus 40Hz Binural Beats
-verweis[5]  = "https://telegra.ph/Ich-will-mich-mit-Winter-bedecken-11-30";   // Rilke: Ich will mich mit Winter bedecken ...
+verweis[5]  = "https://www.youtube.com/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen: Die Geschichte mit dem Pinguin
 verweis[6]  = "https://pxp.one/festival/pxp-festival-2023/"; // PxP-Festival
 verweis[7]  = "https://unterrichten.digital/2020/02/13/telegraph-blog-im-unterricht/";   //
 verweis[8]  = "https://thomashuebl.com/de/wie-bei-meinungsverschiedenheiten-in-beziehung-bleiben/";   // Thomas Hübl: Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben
 verweis[9]  = "https://www.yewtu.be/watch?v=Pos1Xrzb8nQ";   // Freiday
-verweis[10]  = "https://www.yewtu.be/watch?v=EPusBDzUDog";  // Gerald Hüther: Wer nichts unternimmt, verliert seine Lebendigkeit
+verweis[10]  = "https://www.youtube.com/watch?v=Oi_yYXszeeM";  // ok - Hirschhausen: Der König im Krankenhaus
 verweis[11]  = "https://edukativ.fm/edu023-mehr-mehrdimensional-lernen/";   // Jöran im Gespräch mit Max Woodtli
 verweis[12]  = "https://telegra.ph/Eventank%C3%BCndigung-Einf%C3%BChrung-in-Mastodon-als-Lerntool-12-09";   // colearn.social - Mastodon als Lerntool
 verweis[13]  = "https://www.yewtu.be/watch?v=nCcC9P7hH0M";  // Schule ohne Klassenzimmer
@@ -378,15 +378,15 @@ function tuerchen(tag)
 
 <div class="tooltip" id="0" style="color: rgb(170, 0, 0); display: none; left: 198px; top: 609px;">Dieses Türchen ist heute noch geschlossen.</div>
 <div class="tooltip" id="1">Redemption</div>
-<div class="tooltip" id="2">Über Pinguine und Medien</div>
+<div class="tooltip" id="2">Mein Lieblingsrezept f&uuml;r ...</div>
 <div class="tooltip" id="3">Ich will mich mit Winter bedecken ...</div>
 <div class="tooltip" id="4">F&uuml;r die Schulsekret&auml;rin: Hintergrundmusik für konzentriertes Arbeiten</div>
-<div class="tooltip" id="5">Ich will mich mit Winter bedecken</div>
+<div class="tooltip" id="5">Die Geschichte mit dem Pinguin</div>
 <div class="tooltip" id="6">#SchuleFeiertZukunft am 17./18.06.2023</div>
 <div class="tooltip" id="7">Schnell und anonym einen Blog im Unterricht erstellen</div>
 <div class="tooltip" id="8">Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben</div>
 <div class="tooltip" id="9">Freiday</div>
-<div class="tooltip" id="10">Wer nichts unternimmt, verliert seine Lebendigkeit</div>
+<div class="tooltip" id="10">Der K&ouml;nig im Krankenhaus</div>
 <div class="tooltip" id="11">Mehr mehrdimensional lernen, weniger binär denken. Max Woodtli im Gespräch mit Jöran Muuß-Merholz</div>
 <div class="tooltip" id="12">Heute eine Eventankündigung für morgen: Mastodon als Lerntool</div>
 <div class="tooltip" id="13">Schule ohne Klassenzimmer</div>
