--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ var verweis = new Array();
 
 <!-- URLs / LINKS -->
 
-verweis[1]  = "https://yewtu.be/embed/k_LmRcr8Mm4";   	// ok - Redemption Song
+verweis[1]  = "https://yewtu.be/watch?v=k_LmRcr8Mm4";   	// ok - Redemption Song
 verweis[2]  = "https://www.chefkoch.de/rezepte/1841351298407440/Haferflocken-Kaese-Bratlinge.html";   // ok - Haferflocken-Käse-Bratlinge
 verweis[3]  = "https://telegra.ph/Ich-will-mich-mit-Winter-bedecken-11-30";   // ok - Rilke: Ich will mich mit Winter bedecken ...
 verweis[4]  = "https://www.youtube.com/embed/jnj9vEvOKdA";   // ok - Deep Focus 40Hz Binural Beats
