--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ verweis[1]  = "https://yewtu.be/watch?v=k_LmRcr8Mm4";   	// ok - Redemption Song
 verweis[2]  = "https://www.chefkoch.de/rezepte/1841351298407440/Haferflocken-Kaese-Bratlinge.html";   // ok - Haferflocken-Käse-Bratlinge
 verweis[3]  = "https://telegra.ph/Ich-will-mich-mit-Winter-bedecken-11-30";   // ok - Rilke: Ich will mich mit Winter bedecken ...
 verweis[4]  = "https://yewtu.be/watch?v=jnj9vEvOKdA";   // ok - Deep Focus 40Hz Binural Beats
-verweis[5]  = "https://www.youtube.com/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen: Die Geschichte mit dem Pinguin
+verweis[5]  = "https://www.yewtu.be/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen: Die Geschichte mit dem Pinguin
 verweis[6]  = "https://pxp.one/festival/pxp-festival-2023/"; // PxP-Festival
 verweis[7]  = "https://unterrichten.digital/2020/02/13/telegraph-blog-im-unterricht/";   //
 verweis[8]  = "https://thomashuebl.com/de/wie-bei-meinungsverschiedenheiten-in-beziehung-bleiben/";   // Thomas Hübl: Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben
