--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ verweis[2]  = "https://www.chefkoch.de/rezepte/1841351298407440/Haferflocken-Kae
 verweis[3]  = "https://telegra.ph/Ich-will-mich-mit-Winter-bedecken-11-30";   // ok - Rilke: Ich will mich mit Winter bedecken ...
 verweis[4]  = "https://yewtu.be/watch?v=jnj9vEvOKdA";   // ok - Deep Focus 40Hz Binural Beats
 verweis[5]  = "https://www.yewtu.be/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen: Die Geschichte mit dem Pinguin
-verweis[6]  = "https://pxp.one/festival/pxp-festival-2023/"; // PxP-Festival
+verweis[6]  = "https://knusperstuebchen.net/2020/11/18/rosenkohl-aus-dem-ofen-schnelles-abendessen"; // ok - Rosenkohl aus dem Ofen
 verweis[7]  = "https://unterrichten.digital/2020/02/13/telegraph-blog-im-unterricht/";   //
 verweis[8]  = "https://thomashuebl.com/de/wie-bei-meinungsverschiedenheiten-in-beziehung-bleiben/";   // Thomas Hübl: Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben
 verweis[9]  = "https://www.yewtu.be/watch?v=Pos1Xrzb8nQ";   // Freiday
@@ -382,7 +382,7 @@ function tuerchen(tag)
 <div class="tooltip" id="3">Ich will mich mit Winter bedecken ...</div>
 <div class="tooltip" id="4">F&uuml;r die Schulsekret&auml;rin: Hintergrundmusik für konzentriertes Arbeiten</div>
 <div class="tooltip" id="5">Die Geschichte mit dem Pinguin</div>
-<div class="tooltip" id="6">#SchuleFeiertZukunft am 17./18.06.2023</div>
+<div class="tooltip" id="6">Leckeres Wintergemüse aus dem Ofen ...</div>
 <div class="tooltip" id="7">Schnell und anonym einen Blog im Unterricht erstellen</div>
 <div class="tooltip" id="8">Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben</div>
 <div class="tooltip" id="9">Freiday</div>
