--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ verweis[4]  = "https://yewtu.be/watch?v=jnj9vEvOKdA";   // ok - Deep Focus 40Hz 
 verweis[5]  = "https://www.yewtu.be/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen: Die Geschichte mit dem Pinguin
 verweis[6]  = "https://knusperstuebchen.net/2020/11/18/rosenkohl-aus-dem-ofen-schnelles-abendessen"; // ok - Rosenkohl aus dem Ofen
 verweis[7]  = "https://www.swr.de/swraktuell/rheinland-pfalz/mainz/100-mieter-sitzen-in-gau-algesheim-wegen-defekter-heizung-im-kalten-100.html";   // ok - SWR Aktuell: Kaputte Heizung Hippel
-verweis[8]  = "https://thomashuebl.com/de/wie-bei-meinungsverschiedenheiten-in-beziehung-bleiben/";   // Thomas Hübl: Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben
+verweis[8]  = "https://sigrunskalender.files.wordpress.com/2023/12/bw_t1819p_was-wir-brauchen_g-b-shaw.jpg";   // ok - Zitat: Was wir brauchen - G.B. Shaw / barfuss+wild
 verweis[9]  = "https://www.yewtu.be/watch?v=Pos1Xrzb8nQ";   // Freiday
 verweis[10]  = "https://www.youtube.com/watch?v=Oi_yYXszeeM";  // ok - Hirschhausen: Der König im Krankenhaus
 verweis[11]  = "https://edukativ.fm/edu023-mehr-mehrdimensional-lernen/";   // Jöran im Gespräch mit Max Woodtli
@@ -384,7 +384,7 @@ function tuerchen(tag)
 <div class="tooltip" id="5">Die Geschichte mit dem Pinguin</div>
 <div class="tooltip" id="6">Leckeres Wintergemüse aus dem Ofen ...</div>
 <div class="tooltip" id="7">Ich konnte mir nicht verkneifen, das zum T&uuml;rchen zu machen ...</div>
-<div class="tooltip" id="8">Wie wir bei Meinungsverschiedenheiten in Beziehung bleiben</div>
+<div class="tooltip" id="8">Was wir brauchen</div>
 <div class="tooltip" id="9">Freiday</div>
 <div class="tooltip" id="10">Der K&ouml;nig im Krankenhaus</div>
 <div class="tooltip" id="11">Mehr mehrdimensional lernen, weniger binär denken. Max Woodtli im Gespräch mit Jöran Muuß-Merholz</div>
