--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ verweis[5]  = "https://www.yewtu.be/watch?v=4FtuyMpfsnA";   // ok - Hirschhausen
 verweis[6]  = "https://knusperstuebchen.net/2020/11/18/rosenkohl-aus-dem-ofen-schnelles-abendessen"; // ok - Rosenkohl aus dem Ofen
 verweis[7]  = "https://www.swr.de/swraktuell/rheinland-pfalz/mainz/100-mieter-sitzen-in-gau-algesheim-wegen-defekter-heizung-im-kalten-100.html";   // ok - SWR Aktuell: Kaputte Heizung Hippel
 verweis[8]  = "https://sigrunskalender.files.wordpress.com/2023/12/bw_t1819p_was-wir-brauchen_g-b-shaw.jpg";   // ok - Zitat: Was wir brauchen - G.B. Shaw / barfuss+wild
-verweis[9]  = "https://www.yewtu.be/watch?v=Pos1Xrzb8nQ";   // Freiday
+verweis[9]  = "https://merkurist.de/mainz/facebook-rewe-kater-franz-wird-in-ingelheim-zur-beruehmtheit_SrIU";   // ok - Kater Franz (REWE)
 verweis[10]  = "https://www.youtube.com/watch?v=Oi_yYXszeeM";  // ok - Hirschhausen: Der König im Krankenhaus
 verweis[11]  = "https://edukativ.fm/edu023-mehr-mehrdimensional-lernen/";   // Jöran im Gespräch mit Max Woodtli
 verweis[12]  = "https://telegra.ph/Eventank%C3%BCndigung-Einf%C3%BChrung-in-Mastodon-als-Lerntool-12-09";   // colearn.social - Mastodon als Lerntool
@@ -385,7 +385,7 @@ function tuerchen(tag)
 <div class="tooltip" id="6">Leckeres Wintergemüse aus dem Ofen ...</div>
 <div class="tooltip" id="7">Ich konnte mir nicht verkneifen, das zum T&uuml;rchen zu machen ...</div>
 <div class="tooltip" id="8">Was wir brauchen</div>
-<div class="tooltip" id="9">Freiday</div>
+<div class="tooltip" id="9">Kater Franz</div>
 <div class="tooltip" id="10">Der K&ouml;nig im Krankenhaus</div>
 <div class="tooltip" id="11">Mehr mehrdimensional lernen, weniger binär denken. Max Woodtli im Gespräch mit Jöran Muuß-Merholz</div>
 <div class="tooltip" id="12">Heute eine Eventankündigung für morgen: Mastodon als Lerntool</div>
