--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ verweis[8]  = "https://sigrunskalender.files.wordpress.com/2023/12/bw_t1819p_was
 verweis[9]  = "https://merkurist.de/mainz/facebook-rewe-kater-franz-wird-in-ingelheim-zur-beruehmtheit_SrIU";   // ok - Kater Franz (REWE)
 verweis[10]  = "https://www.youtube.com/watch?v=Oi_yYXszeeM";  // ok - Hirschhausen: Der König im Krankenhaus
 verweis[11]  = "https://yewtu.be/watch?v=L4bOsSB1Uz4";   // ok - Ólafur Arnalds - Poland
-verweis[12]  = "https://telegra.ph/Eventank%C3%BCndigung-Einf%C3%BChrung-in-Mastodon-als-Lerntool-12-09";   // colearn.social - Mastodon als Lerntool
+verweis[12]  = "https://yewtu.be/watch?v=AC2bPXdLvn0";   // ok - Ursula Seghezzi: Radikales Loslassen
 verweis[13]  = "https://www.yewtu.be/watch?v=nCcC9P7hH0M";  // Schule ohne Klassenzimmer
 verweis[14]  = "https://www.yewtu.be/watch?v=f7DmgdYJZfk";  // Svenja Hofert über den Nutzen von Weak Ties
 verweis[15]  = "https://www.youtube.com/embed/gU_EbnKESVo";   // ok - Schulportrait Allemannenschule Wutöschingen
@@ -388,7 +388,7 @@ function tuerchen(tag)
 <div class="tooltip" id="9">Kater Franz</div>
 <div class="tooltip" id="10">Der K&ouml;nig im Krankenhaus</div>
 <div class="tooltip" id="11">Mach Dir eine Kerze an und g&ouml;nn Dir einen Tee oder Kaffee ...</div>
-<div class="tooltip" id="12">Heute eine Eventankündigung für morgen: Mastodon als Lerntool</div>
+<div class="tooltip" id="12">Winter</div>
 <div class="tooltip" id="13">Schule ohne Klassenzimmer</div>
 <div class="tooltip" id="14">Über den Nutzen von losen Verbindungen beim Finden neuer Lösungen</div>
 <div class="tooltip" id="15">Schule ganz anders: Individualisiertes Lernen</div>
