--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ verweis[9]  = "https://merkurist.de/mainz/facebook-rewe-kater-franz-wird-in-inge
 verweis[10]  = "https://www.youtube.com/watch?v=Oi_yYXszeeM";  // ok - Hirschhausen: Der König im Krankenhaus
 verweis[11]  = "https://yewtu.be/watch?v=L4bOsSB1Uz4";   // ok - Ólafur Arnalds - Poland
 verweis[12]  = "https://yewtu.be/watch?v=AC2bPXdLvn0";   // ok - Ursula Seghezzi: Radikales Loslassen
-verweis[13]  = "https://www.yewtu.be/watch?v=nCcC9P7hH0M";  // Schule ohne Klassenzimmer
+verweis[13]  = "https://telegra.ph/Tipp-Schnell-und-ohne-eigene-Seite-etwas-im-Internet-ver%C3%B6ffentlichen-12-12";  // ok - Telegra.ph
 verweis[14]  = "https://www.yewtu.be/watch?v=f7DmgdYJZfk";  // Svenja Hofert über den Nutzen von Weak Ties
 verweis[15]  = "https://www.youtube.com/embed/gU_EbnKESVo";   // ok - Schulportrait Allemannenschule Wutöschingen
 verweis[16]  = "https://marloes-goeke.de/29-inspirierend-fuehren-oder-frag-immer-erst-warum/";   //
@@ -389,7 +389,7 @@ function tuerchen(tag)
 <div class="tooltip" id="10">Der K&ouml;nig im Krankenhaus</div>
 <div class="tooltip" id="11">Mach Dir eine Kerze an und g&ouml;nn Dir einen Tee oder Kaffee ...</div>
 <div class="tooltip" id="12">Winter</div>
-<div class="tooltip" id="13">Schule ohne Klassenzimmer</div>
+<div class="tooltip" id="13">Ein Geheimtipp</div>
 <div class="tooltip" id="14">Über den Nutzen von losen Verbindungen beim Finden neuer Lösungen</div>
 <div class="tooltip" id="15">Schule ganz anders: Individualisiertes Lernen</div>
 <div class="tooltip" id="16">Auch ein wichtiger Aspekt des Lernens: Frag immer erst warum.</div>
