--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ verweis[12]  = "https://yewtu.be/watch?v=AC2bPXdLvn0";   // ok - Ursula Seghezzi
 verweis[13]  = "https://telegra.ph/Tipp-Schnell-und-ohne-eigene-Seite-etwas-im-Internet-ver%C3%B6ffentlichen-12-12";  // ok - Telegra.ph
 verweis[14]  = "https://www.yewtu.be/watch?v=f7DmgdYJZfk";  // ok - Svenja Hofert über den Nutzen von Weak Ties
 verweis[15]  = "https://www.youtube.com/embed/gU_EbnKESVo";   // ok - Schulportrait Allemannenschule Wutöschingen
-verweis[16]  = "https://marloes-goeke.de/29-inspirierend-fuehren-oder-frag-immer-erst-warum/";   //
+verweis[16]  = "https://sigrunskalender.files.wordpress.com/2023/12/2023-12-15-06.15.07-1.jpg";   // ok - Foto: Merets Adventskalender
 verweis[17]  = "https://www.youtube.com/embed/5ZP5ANGMW_8";   // ok HARALD HAUSER - A Silent Christmas Thought
 verweis[18]  = "https://www.yewtu.be/watch?v=i-GPyzkv4XI";   // Silke Weiß: Kommunikation als Achtsamkeitspraxis
 verweis[19]  = "https://weiterbildungsblog.de/blog/2022/10/25/peer-to-peer-lernen-fuer-die-bleistiftspitze/";   //
@@ -392,7 +392,7 @@ function tuerchen(tag)
 <div class="tooltip" id="13">Ein Geheimtipp</div>
 <div class="tooltip" id="14">Das lass ich einfach mal so.<br>Das hatte ich schon letztes Jahr im Adventskalender ;-)</div>
 <div class="tooltip" id="15">Schule ganz anders: Individualisiertes Lernen</div>
-<div class="tooltip" id="16">Auch ein wichtiger Aspekt des Lernens: Frag immer erst warum.</div>
+<div class="tooltip" id="16">M. hat gebastelt / Noch 8 Tage bis Weihnachten</div>
 <div class="tooltip" id="17">A Silent Christmas Thought</div>
 <div class="tooltip" id="18">Kommunikation als Achtsamkeitspraxis</div>
 <div class="tooltip" id="19">Peer-to-Peer Lernen für die 'Bleistiftspitze'</div>
