--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ verweis[14]  = "https://www.yewtu.be/watch?v=f7DmgdYJZfk";  // ok - Svenja Hofer
 verweis[15]  = "https://www.youtube.com/embed/gU_EbnKESVo";   // ok - Schulportrait Allemannenschule Wutöschingen
 verweis[16]  = "https://sigrunskalender.files.wordpress.com/2023/12/2023-12-15-06.15.07-1.jpg";   // ok - Foto: Merets Adventskalender
 verweis[17]  = "https://www.youtube.com/embed/5ZP5ANGMW_8";   // ok HARALD HAUSER - A Silent Christmas Thought
-verweis[18]  = "https://www.yewtu.be/watch?v=i-GPyzkv4XI";   // Silke Weiß: Kommunikation als Achtsamkeitspraxis
+verweis[18]  = "https://bildung.social/@holger_moller/111583312602886333";   // ok - Angie, Rolling Stones
 verweis[19]  = "https://weiterbildungsblog.de/blog/2022/10/25/peer-to-peer-lernen-fuer-die-bleistiftspitze/";   //
 verweis[20]  = "https://telegra.ph/7-Fragen-12-18";   //  7 Fragen von Norman Bücher
 verweis[21]  = "https://magazin.forumbd.de/haltung/beteiligung-von-schuelerinnen/";   //  Beteiligung von Schüler:innen (Hannes Kaulfersch / Marina Weisband)
@@ -394,7 +394,7 @@ function tuerchen(tag)
 <div class="tooltip" id="15">Schule ganz anders: Individualisiertes Lernen</div>
 <div class="tooltip" id="16">M. hat gebastelt / Noch 8 Tage bis Weihnachten</div>
 <div class="tooltip" id="17">A Silent Christmas Thought</div>
-<div class="tooltip" id="18">Kommunikation als Achtsamkeitspraxis</div>
+<div class="tooltip" id="18">50 Jahre ist das her.</div>
 <div class="tooltip" id="19">Peer-to-Peer Lernen für die 'Bleistiftspitze'</div>
 <div class="tooltip" id="20">7 Fragen zum Jahreswechsel</div>
 <div class="tooltip" id="21">Dialog: Beteiligung von Schüler:innen</div>
