--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ verweis[15]  = "https://www.youtube.com/embed/gU_EbnKESVo";   // ok - Schulportr
 verweis[16]  = "https://sigrunskalender.files.wordpress.com/2023/12/2023-12-15-06.15.07-1.jpg";   // ok - Foto: Merets Adventskalender
 verweis[17]  = "https://www.youtube.com/embed/5ZP5ANGMW_8";   // ok HARALD HAUSER - A Silent Christmas Thought
 verweis[18]  = "https://bildung.social/@holger_moller/111583312602886333";   // ok - Angie, Rolling Stones
-verweis[19]  = "https://weiterbildungsblog.de/blog/2022/10/25/peer-to-peer-lernen-fuer-die-bleistiftspitze/";   //
+verweis[19]  = "https://www.youtube.com/watch?v=0xfuGf3VPLc&t=26s";   // ok - Merry XMAS (Peter Frampton u.a.)
 verweis[20]  = "https://telegra.ph/7-Fragen-12-18";   //  7 Fragen von Norman Bücher
 verweis[21]  = "https://magazin.forumbd.de/haltung/beteiligung-von-schuelerinnen/";   //  Beteiligung von Schüler:innen (Hannes Kaulfersch / Marina Weisband)
 verweis[22]  = "https://telegra.ph/Clarity-Online-Kurs-12-21";   // Clarity Online Kurs
@@ -395,7 +395,7 @@ function tuerchen(tag)
 <div class="tooltip" id="16">M. hat gebastelt / Noch 8 Tage bis Weihnachten</div>
 <div class="tooltip" id="17">A Silent Christmas Thought</div>
 <div class="tooltip" id="18">50 Jahre ist das her.</div>
-<div class="tooltip" id="19">Peer-to-Peer Lernen für die 'Bleistiftspitze'</div>
+<div class="tooltip" id="19">Mein Lieblingsweihnachtslied</div>
 <div class="tooltip" id="20">7 Fragen zum Jahreswechsel</div>
 <div class="tooltip" id="21">Dialog: Beteiligung von Schüler:innen</div>
 <div class="tooltip" id="22">Eine Anregung für die Zeit zwischen den Jahren</div>
