--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ verweis[16]  = "https://sigrunskalender.files.wordpress.com/2023/12/2023-12-15-0
 verweis[17]  = "https://www.youtube.com/embed/5ZP5ANGMW_8";   // ok HARALD HAUSER - A Silent Christmas Thought
 verweis[18]  = "https://bildung.social/@holger_moller/111583312602886333";   // ok - Angie, Rolling Stones
 verweis[19]  = "https://www.youtube.com/watch?v=0xfuGf3VPLc&t=26s";   // ok - Merry XMAS (Peter Frampton u.a.)
-verweis[20]  = "https://telegra.ph/7-Fragen-12-18";   //  7 Fragen von Norman Bücher
-verweis[21]  = "https://magazin.forumbd.de/haltung/beteiligung-von-schuelerinnen/";   //  Beteiligung von Schüler:innen (Hannes Kaulfersch / Marina Weisband)
+verweis[20]  = "https://telegra.ph/Hoffnung-12-19";   //  ok - Hoffnung, Edith Eva Eger
+verweis[21]  = "https://telegra.ph/7-Fragen-12-18";   //  ok - 7 Fragen von Norman Bücher
 verweis[22]  = "https://telegra.ph/Clarity-Online-Kurs-12-21";   // Clarity Online Kurs
 verweis[23]  = "https://www.projekt-gutenberg.org/borchert/andiedie/chap008.html";   // Borchert: Die 3 dunklen Könige
 verweis[24]  = "https://telegra.ph/Es-gibt-so-wunderwei%C3%9Fe-N%C3%A4chte-12-23";   // ok - Rilke: Wunderweiße Nächte
@@ -396,8 +396,8 @@ function tuerchen(tag)
 <div class="tooltip" id="17">A Silent Christmas Thought</div>
 <div class="tooltip" id="18">50 Jahre ist das her.</div>
 <div class="tooltip" id="19">Mein Lieblingsweihnachtslied</div>
-<div class="tooltip" id="20">7 Fragen zum Jahreswechsel</div>
-<div class="tooltip" id="21">Dialog: Beteiligung von Schüler:innen</div>
+<div class="tooltip" id="20">Hoffnung</div>
+<div class="tooltip" id="21">7 Fragen zum Jahreswechsel</div>
 <div class="tooltip" id="22">Eine Anregung für die Zeit zwischen den Jahren</div>
 <div class="tooltip" id="23">Eine Weihnachtsgeschichte</div>
 <div class="tooltip" id="24">Ein Weihnachtsgedicht</div>
