--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ verweis[17]  = "https://www.youtube.com/embed/5ZP5ANGMW_8";   // ok HARALD HAUSE
 verweis[18]  = "https://bildung.social/@holger_moller/111583312602886333";   // ok - Angie, Rolling Stones
 verweis[19]  = "https://www.youtube.com/watch?v=0xfuGf3VPLc&t=26s";   // ok - Merry XMAS (Peter Frampton u.a.)
 verweis[20]  = "https://telegra.ph/Hoffnung-12-19";   //  ok - Hoffnung, Edith Eva Eger
-verweis[21]  = "https://telegra.ph/7-Fragen-12-18";   //  ok - 7 Fragen von Norman Bücher
-verweis[22]  = "https://telegra.ph/Clarity-Online-Kurs-12-21";   // Clarity Online Kurs
+verweis[21]  = "https://telegra.ph/Beppo-12-20";   //  ok - Beppo der Straßenkehrer
+verweis[22]  = "https://telegra.ph/7-Fragen-12-18";   // ok - 7 Fragen von Norman Bücher
 verweis[23]  = "https://www.projekt-gutenberg.org/borchert/andiedie/chap008.html";   // Borchert: Die 3 dunklen Könige
 verweis[24]  = "https://telegra.ph/Es-gibt-so-wunderwei%C3%9Fe-N%C3%A4chte-12-23";   // ok - Rilke: Wunderweiße Nächte
 verweis[25]  = "https://yewtu.be/embed/lCpXMy5GalI?t=106"; // ok - Bing Crosby, David Bowie - Peace On Earth / Little Drummer Boy  // https://youtu.be/watch?v=lCpXMy5GalI&t=106
@@ -397,8 +397,8 @@ function tuerchen(tag)
 <div class="tooltip" id="18">50 Jahre ist das her.</div>
 <div class="tooltip" id="19">Mein Lieblingsweihnachtslied</div>
 <div class="tooltip" id="20">Hoffnung</div>
-<div class="tooltip" id="21">7 Fragen zum Jahreswechsel</div>
-<div class="tooltip" id="22">Eine Anregung für die Zeit zwischen den Jahren</div>
+<div class="tooltip" id="21">Ein Klassiker</div>
+<div class="tooltip" id="22">7 Fragen zum Jahreswechsel</div>
 <div class="tooltip" id="23">Eine Weihnachtsgeschichte</div>
 <div class="tooltip" id="24">Ein Weihnachtsgedicht</div>
 <div class="tooltip" id="25">Frohe Weihnachten und einen guten Übergang ins neue Jahr 2024!</div>
