--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ verweis[21]  = "https://telegra.ph/Beppo-12-20";   //  ok - Beppo der Straßenke
 verweis[22]  = "https://telegra.ph/7-Fragen-12-18";   // ok - 7 Fragen von Norman Bücher
 verweis[23]  = "https://www.projekt-gutenberg.org/borchert/andiedie/chap008.html";   // Borchert: Die 3 dunklen Könige
 verweis[24]  = "https://telegra.ph/Es-gibt-so-wunderwei%C3%9Fe-N%C3%A4chte-12-23";   // ok - Rilke: Wunderweiße Nächte
-verweis[25]  = "https://yewtu.be/embed/lCpXMy5GalI?t=106"; // ok - Bing Crosby, David Bowie - Peace On Earth / Little Drummer Boy  // https://youtu.be/watch?v=lCpXMy5GalI&t=106
+verweis[25]  = "https://www.youtube.com/watch?v=lCpXMy5GalI&t=106s"; // ok - Bing Crosby, David Bowie - Peace On Earth / Little Drummer Boy  // https://youtu.be/watch?v=lCpXMy5GalI&t=106
 
 
 <!-- ---------------------------------------------------------------------------------------- -->
